@@ -1,18 +1,5 @@
 package com.bettercloud.vault.api;
 
-import static junit.framework.TestCase.assertEquals;
-import static org.junit.Assert.assertTrue;
-
-import java.io.IOException;
-import java.util.Map;
-import java.util.concurrent.TimeUnit;
-
-import org.junit.BeforeClass;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
-
 import com.bettercloud.vault.Vault;
 import com.bettercloud.vault.VaultException;
 import com.bettercloud.vault.api.mounts.Mount;
@@ -22,6 +9,17 @@ import com.bettercloud.vault.api.mounts.MountType;
 import com.bettercloud.vault.api.mounts.TimeToLive;
 import com.bettercloud.vault.response.MountResponse;
 import com.bettercloud.vault.util.VaultContainer;
+import java.io.IOException;
+import java.util.Map;
+import java.util.concurrent.TimeUnit;
+import org.junit.BeforeClass;
+import org.junit.ClassRule;
+import org.junit.Rule;
+import org.junit.Test;
+import org.junit.rules.ExpectedException;
+
+import static junit.framework.TestCase.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 /** Integration tests for for operations on Vault's <code>/v1/sys/mounts/*</code> REST endpoints. */
 public class MountsTests {
@@ -144,8 +142,8 @@ public class MountsTests {
 
         assertEquals(200, response.getRestResponse().getStatus());
 
-        assertEquals(new Integer(21600), config.getDefaultLeaseTtl());
-        assertEquals(new Integer(21600), config.getMaxLeaseTtl());
+        assertEquals(Integer.valueOf(21600), config.getDefaultLeaseTtl());
+        assertEquals(Integer.valueOf(21600), config.getMaxLeaseTtl());
     }
 
     @Test
@@ -180,8 +178,8 @@ public class MountsTests {
         final Mount mount = response.getMount();
         final MountConfig config = mount.getConfig();
 
-        assertEquals(new Integer(43200), config.getDefaultLeaseTtl());
-        assertEquals(new Integer(43200), config.getMaxLeaseTtl());
+        assertEquals(Integer.valueOf(43200), config.getDefaultLeaseTtl());
+        assertEquals(Integer.valueOf(43200), config.getMaxLeaseTtl());
     }
 
     @Test
